--- a/Accepted/Main.storyboard
+++ b/Accepted/Main.storyboard
@@ -87,6 +87,26 @@
             </objects>
             <point key="canvasLocation" x="-338.5" y="82.5"/>
         </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="hQ9-Uh-DtT">
+            <objects>
+                <viewController storyboardIdentifier="SettingsViewController" id="eDJ-pP-2s2" customClass="SettingsViewController" customModule="Accepted" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Kb5-PL-lzm"/>
+                        <viewControllerLayoutGuide type="bottom" id="KTX-cm-1HF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IcX-od-Ll3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.7211761445" green="0.88450633280000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0jq-Cj-9aG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="602.5" y="-663.5"/>
+        </scene>
         <!--AccountViewController-->
         <scene sceneID="7Bh-9q-lDN">
             <objects>
@@ -134,6 +154,16 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NRC-1X-xvN">
+                                <rect key="frame" x="159" y="346" width="57" height="30"/>
+                                <state key="normal" title="Settings">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.060231345870000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="settingsTapped:" destination="jto-Nw-pQP" eventType="touchUpInside" id="u9p-gd-rA7"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.7211761445" green="0.88450633280000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -163,19 +193,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Number of Schools:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YdP-MV-ZoF">
-                                <rect key="frame" x="79" y="107" width="216" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="So, a school will be clickable here" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1rc-Qe-QlS">
-                                <rect key="frame" x="58" y="238" width="259" height="21"/>
+                                <rect key="frame" x="79" y="72" width="216" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="trF-hx-s30">
-                                <rect key="frame" x="143" y="285" width="88" height="30"/>
+                                <rect key="frame" x="143" y="101" width="88" height="30"/>
                                 <state key="normal" title="UW madison">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -253,7 +277,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2wa-Ah-2Na" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="SCw-yc-rUb" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1506.5" y="82.5"/>
+            <point key="canvasLocation" x="1059.5" y="859.5"/>
         </scene>
         <!--Dev Tools View Controller-->
         <scene sceneID="cVa-XI-16T">
@@ -277,7 +301,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mJB-eC-kuZ">
-                                <rect key="frame" x="143" y="102" width="88" height="30"/>
+                                <rect key="frame" x="143" y="319" width="88" height="30"/>
                                 <state key="normal" title="Delete Users">
                                     <color key="titleColor" red="1" green="0.0" blue="0.060231345870000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -287,7 +311,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qwg-DH-dSA">
-                                <rect key="frame" x="135" y="172" width="104" height="30"/>
+                                <rect key="frame" x="135" y="394" width="104" height="30"/>
                                 <state key="normal" title="Delete Schools">
                                     <color key="titleColor" red="1" green="0.0" blue="0.060231345870000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -296,13 +320,45 @@
                                     <action selector="deleteSchoolsTapped:" destination="77h-I0-QMU" eventType="touchUpInside" id="SOs-P6-CPY"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecv-E2-UlB">
-                                <rect key="frame" x="109" y="210" width="156" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oCk-N7-CmR">
+                                <rect key="frame" x="109" y="365" width="156" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oCk-N7-CmR">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZYh-Tj-nD6">
+                                <rect key="frame" x="135" y="102" width="105" height="30"/>
+                                <state key="normal" title="Populate Users">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.060231345870000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="populateUsersTapped:" destination="77h-I0-QMU" eventType="touchUpInside" id="ReR-Nv-woa"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jes-Dl-lcy">
+                                <rect key="frame" x="127" y="169" width="121" height="30"/>
+                                <state key="normal" title="Populate Schools">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.060231345870000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="populateSchoolsTapped:" destination="77h-I0-QMU" eventType="touchUpInside" id="C9R-0D-tKJ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecv-E2-UlB">
+                                <rect key="frame" x="109" y="432" width="156" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4bE-fx-fQp">
+                                <rect key="frame" x="109" y="207" width="156" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UH3-0g-Q4A">
                                 <rect key="frame" x="109" y="140" width="156" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -315,6 +371,8 @@
                     <connections>
                         <outlet property="deleteSchoolsLabel" destination="ecv-E2-UlB" id="A6O-Es-car"/>
                         <outlet property="deleteUsersLabel" destination="oCk-N7-CmR" id="bcG-jK-c9j"/>
+                        <outlet property="populateSchoolsLabel" destination="4bE-fx-fQp" id="lKY-Oq-4gB"/>
+                        <outlet property="populateUsersLabel" destination="UH3-0g-Q4A" id="Ztn-2D-OCQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TAm-ev-AoS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -381,7 +439,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zhg-hT-YRa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="135.5" y="859.5"/>
+            <point key="canvasLocation" x="602.5" y="859.5"/>
         </scene>
         <!--CreateAccountViewController-->
         <scene sceneID="fed-NI-pMk">
@@ -461,7 +519,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cY4-Yp-2vI" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="RUQ-fM-60b" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="135.5" y="-665.5"/>
+            <point key="canvasLocation" x="-338.5" y="-663.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="PWM-62-Lwk">
